<resources>
    <string name="app_name">assetViz1</string>
    <string name="action_settings">Settings</string>
    <string name="cash">Cash</string>
    <string name="asset_visualizer">Money Circle</string>
    <string name="stock">Stock</string>
    <string name="cryptocurrencies">CryptoCurrencies</string>
    <string name="bonds">Bonds</string>
    <string name="gold_silver_etc">Gold/Silver/Etc.</string>
    <string name="real_estate">Real Estate</string>
    <string name="land">Land</string>
    <string name="vehicles">Vehicles</string>
    <string name="generate_pie_chart">Generate Pie Chart</string>
    <string name="crypto_currencies">Crypto Currencies</string>
    <string name="reset">Reset</string>
    <string name="please_enter_all_values_in_usd">Please enter all values in USD</string>
    <string name="please_enter_all_values_in_usd_123_45">Please Enter All Values in USD (123.45)</string>
    <string name="stocks">Stocks</string>
    <string name="other">Other</string>
    <string name="sumCategories">Sum of assets:</string>
</resources>
