<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="#2F4F4F">

    <TextView
        android:id="@+id/AssetVisualizer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:text="@string/asset_visualizer"
        android:textColor="#000000"
        android:background="#F8F8FF"/>

    <TextView
        android:id="@+id/userInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        android:text="Please Enter all Values in USD ($123.45)"
        android:textSize="20sp"
        android:textColor="#000000"
        android:background="#F8F8FF"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:background="#F8F8FF">


        <EditText
            android:id="@+id/cashInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cash"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/cryptosInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/crypto_currencies"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/stocksInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/stock"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/bondsInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/bonds"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/comMoneyInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/gold_silver_etc"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/realEstateInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/real_estate"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/landInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/land"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/vehiclesInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/vehicles"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="600dp"
        android:text="@string/generate_pie_chart"
        android:textSize="18dp" />


</RelativeLayout>